# PomodoroOverlay

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/hooks/: useTimer.ts
src/utils/: history.ts  initSounds.ts  logger.ts  settingsWindow.ts  sound.ts  window.ts
