[package]
name = "pomodoro-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pomodoro_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rodio = "0.19"
rand = "0.10.1"
